--- a/Example/AFChatUISample/AFChatUISample/ScheduleGame.storyboard
+++ b/Example/AFChatUISample/AFChatUISample/ScheduleGame.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="jSI-Ms-hcE">
             <objects>
                 <navigationController id="xBT-N4-eFN" sceneMemberID="viewController">
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1yl-oy-DN0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -31,19 +31,19 @@
                         <viewControllerLayoutGuide type="bottom" id="KHi-r1-J7G"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ThN-Io-IKH">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cEP-CW-bDU">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cEP-CW-bDU">
+                                <frame key="frameInset" width="320" height="568"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="dataSource" destination="sT5-ZE-hrW" id="tnX-7r-G4g"/>
                                     <outlet property="delegate" destination="sT5-ZE-hrW" id="FKQ-IY-MsU"/>
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="cEP-CW-bDU" secondAttribute="bottom" id="Ahd-ac-CM9"/>
                             <constraint firstAttribute="trailing" secondItem="cEP-CW-bDU" secondAttribute="trailing" id="CU4-1X-EWf"/>
@@ -58,7 +58,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="tableView" destination="cEP-CW-bDU" id="cuJ-Cl-uSY"/>
                         <segue destination="v59-Oa-Auw" kind="show" identifier="GameAttendanceSegue" id="Apl-7B-CG9"/>
@@ -77,11 +76,11 @@
                         <viewControllerLayoutGuide type="bottom" id="bSD-fN-Jr5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="NVE-7u-XD3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v90-gW-CSo">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v90-gW-CSo">
+                                <frame key="frameInset" width="320" height="568"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e5T-rI-dIj">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -90,12 +89,11 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lPT-6m-1JT">
-                                        <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </collectionViewCell>
                                 </cells>
@@ -105,7 +103,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="v90-gW-CSo" secondAttribute="bottom" id="7Vr-u0-pFX"/>
                             <constraint firstItem="v90-gW-CSo" firstAttribute="leading" secondItem="NVE-7u-XD3" secondAttribute="leading" id="Fco-n3-MLN"/>
@@ -120,7 +118,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="collectionView" destination="v90-gW-CSo" id="06P-bz-Koy"/>
                     </connections>
@@ -138,26 +135,26 @@
                         <viewControllerLayoutGuide type="bottom" id="qfD-ZV-IHi"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="g1A-7R-Q60">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="tkK-Vt-C9R">
-                                <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tkK-Vt-C9R">
+                                <frame key="frameInset" minY="64" width="320" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="NAS-sS-sv0"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="szh-9f-GIj">
-                                <rect key="frame" x="0.0" y="108" width="320" height="460"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="szh-9f-GIj">
+                                <frame key="frameInset" minY="108" width="320" height="460"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="dataSource" destination="9cP-eP-4w8" id="pKY-zK-B4j"/>
                                     <outlet property="delegate" destination="9cP-eP-4w8" id="VuI-pD-MBB"/>
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="szh-9f-GIj" firstAttribute="top" secondItem="tkK-Vt-C9R" secondAttribute="bottom" id="04O-Cc-p1n"/>
                             <constraint firstItem="tkK-Vt-C9R" firstAttribute="top" secondItem="RN6-sp-hol" secondAttribute="bottom" id="Dcp-nE-vAp"/>
@@ -168,7 +165,6 @@
                             <constraint firstAttribute="trailing" secondItem="tkK-Vt-C9R" secondAttribute="trailing" id="vjR-nh-INx"/>
                         </constraints>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="searchBar" destination="tkK-Vt-C9R" id="2SH-zg-hsG"/>
                         <outlet property="tableView" destination="szh-9f-GIj" id="8IZ-of-DQG"/>
@@ -187,11 +183,11 @@
                         <viewControllerLayoutGuide type="bottom" id="vie-yp-5fV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tPt-PG-bDf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Game Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w6T-pt-hkY">
-                                <rect key="frame" x="38" y="91" width="245" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Game Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w6T-pt-hkY">
+                                <frame key="frameInset" minX="38" minY="91" width="245" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="245" id="6yN-G0-yU3"/>
                                     <constraint firstAttribute="height" constant="30" id="qSa-Md-0Ez"/>
@@ -199,8 +195,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hoy-sG-gCM">
-                                <rect key="frame" x="38" y="144" width="136" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hoy-sG-gCM">
+                                <frame key="frameInset" minX="38" minY="144" width="136" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="2Xh-89-6a0"/>
                                     <constraint firstAttribute="width" constant="136" id="2cN-16-7x3"/>
@@ -209,9 +205,9 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="T9F-at-7E4">
-                                <rect key="frame" x="38" y="173" width="245" height="128"/>
-                                <color key="backgroundColor" red="0.93841655030000004" green="0.93841655030000004" blue="0.93841655030000004" alpha="1" colorSpace="calibratedRGB"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="T9F-at-7E4">
+                                <frame key="frameInset" minX="38" minY="173" width="245" height="128"/>
+                                <color key="backgroundColor" red="0.93841655030000004" green="0.93841655030000004" blue="0.93841655030000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="kGD-kW-NSx"/>
                                     <constraint firstAttribute="width" constant="245" id="wOz-Ka-vVA"/>
@@ -220,7 +216,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="hoy-sG-gCM" firstAttribute="top" secondItem="w6T-pt-hkY" secondAttribute="bottom" constant="23" id="Gg7-VM-lkQ"/>
                             <constraint firstItem="hoy-sG-gCM" firstAttribute="leading" secondItem="w6T-pt-hkY" secondAttribute="leading" id="MEI-9i-bnp"/>
@@ -237,7 +233,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="gameDescriptionTitle" destination="T9F-at-7E4" id="Lq7-mJ-8Fw"/>
                         <outlet property="gameTitleInput" destination="w6T-pt-hkY" id="pGI-XP-RJ1"/>
