--- a/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
+++ b/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
             <objects>
                 <navigationController id="kWH-7z-AbZ" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Profile" id="o5V-uT-Snh"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Nr-ky-B9v">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="5Nr-ky-B9v">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -30,11 +30,10 @@
                         <viewControllerLayoutGuide type="bottom" id="pjg-nK-S5n"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="5W5-Mj-H1R">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zx4-kf-Uvo">
-                                <frame key="frameInset" minX="37" minY="153" width="246" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zx4-kf-Uvo">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="DPd-oE-TAM"/>
                                     <constraint firstAttribute="width" constant="246" id="fDa-wD-8Kr"/>
@@ -42,8 +41,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tBp-mS-98m">
-                                <frame key="frameInset" minX="37" minY="202" width="246" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tBp-mS-98m">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="246" id="2KM-bH-XvU"/>
                                     <constraint firstAttribute="height" constant="30" id="MYo-LU-VKN"/>
@@ -51,8 +49,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Epq-1b-PfL">
-                                <frame key="frameInset" minX="37" minY="278" width="106" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Epq-1b-PfL">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="106" id="40V-M3-LO2"/>
                                     <constraint firstAttribute="height" constant="30" id="y2K-uJ-4mK"/>
@@ -62,8 +59,7 @@
                                     <action selector="leftButtonTapped:" destination="2vl-Ln-pi0" eventType="touchUpInside" id="JGG-qz-NdI"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QlK-Dp-zDi">
-                                <frame key="frameInset" minX="177" minY="278" width="106" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QlK-Dp-zDi">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="YuY-yl-Vdu"/>
                                     <constraint firstAttribute="width" constant="106" id="eEf-b5-bew"/>
@@ -73,8 +69,7 @@
                                     <action selector="rightButtonTapped:" destination="2vl-Ln-pi0" eventType="touchUpInside" id="LYU-WZ-EHy"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rzg-rC-McC">
-                                <frame key="frameInset" minX="120" minY="49" width="80" height="80"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rzg-rC-McC">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="HhX-oI-ehZ"/>
                                     <constraint firstAttribute="height" constant="80" id="gMk-72-lL7"/>
@@ -131,7 +126,7 @@
             <objects>
                 <navigationController id="W0y-Zz-m3k" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Game" id="9wV-DC-HWV"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oyy-oI-EZP">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="oyy-oI-EZP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -152,11 +147,10 @@
                         <viewControllerLayoutGuide type="bottom" id="Zl2-YU-CeJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="KGw-3f-Nf9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V0U-7H-1Hj">
-                                <frame key="frameInset" minY="64" width="320" height="504"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V0U-7H-1Hj">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="dataSource" destination="SHG-dk-KfQ" id="9LL-25-Pc9"/>
@@ -191,14 +185,11 @@
                         <viewControllerLayoutGuide type="bottom" id="04S-mR-pb5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="OSH-32-fFE">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="gc_screen" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kpL-Dt-thQ">
-                                <frame key="frameInset" width="320" height="568"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t2u-QX-4gz">
-                                <frame key="frameInset" minX="269" minY="127" width="35" height="35"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gc_screen" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kpL-Dt-thQ"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t2u-QX-4gz">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="35" id="d3J-1s-nuj"/>
                                     <constraint firstAttribute="height" constant="35" id="eBI-Wd-B0b"/>
@@ -233,7 +224,7 @@
             <objects>
                 <navigationController id="EpO-UF-HhA" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Search" id="OXl-Xx-K6q"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CkV-s5-miN">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="CkV-s5-miN">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -254,18 +245,16 @@
                         <viewControllerLayoutGuide type="bottom" id="yej-Qs-UBn"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lW7-I7-m42">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YlY-Tv-PCQ">
-                                <frame key="frameInset" minY="64" width="320" height="44"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="YlY-Tv-PCQ">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="uwK-8y-Jzs"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qWl-2h-jlA">
-                                <frame key="frameInset" minY="108" width="320" height="411"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qWl-2h-jlA">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
                         </subviews>
